force-app/main/default/objects/KimbleOne__ResourceStdCostCalcMethodRateCard__c/KimbleOne__ResourceStdCostCalcMethodRateCard__c.object-meta.xml
<CustomObject>
    <label>Resource Std Cost Calc Method Rate Card</label>
    <nameField>
        <label>Resource Std Cost Calc Method Rate Card</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Std Cost Calc Method Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>