force-app/main/default/objects/KimbleOne__ResourceStdCostCalcMethodRateCard__c/fields/KimbleOne__RateCard__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>KimbleOne__RateCard__c</referenceTo>
    <relationshipLabel>Resource Std Cost Calc Method Rate Cards</relationshipLabel>
    <relationshipName>ResourceStdCostCalcMethodRateCards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>