force-app/main/default/objects/KimbleOne__ResourceStdCostCalcMethodRateCard__c/fields/KimbleOne__ResourceStandardCostCalcMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceStandardCostCalcMethod__c</fullName>
    <label>Resource Standard Cost Calc Method</label>
    <referenceTo>KimbleOne__ResourceStandardCostCalcMethod__c</referenceTo>
    <relationshipLabel>Resource Std Cost Calc Method Rate Cards</relationshipLabel>
    <relationshipName>ResourceStdCostCalcMethodRateCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>