force-app/main/default/objects/KimbleOne__ResourceStdCostCalcMethodRateCard__c/fields/KimbleOne__Status__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RateCardStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resource Std Cost Calc Method Rate Cards</relationshipLabel>
    <relationshipName>ResourceStdCostCalcMethodRateCards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>